# lithos

./: .gitignore  CMakeLists.txt  Makefile  gen_texture.py  run_game.py
assets/models/block/: cactus.json  oak_log.json  spruce_log.json
assets/textures/: block.ppm
assets/worldgen/: blocklayers.json  caves.json  geologicprovinces.json  landforms.json  rockstrata.json  treegen.json
assets/worldgen/trees/: acacia.json  birch.json  darkoak.json  jungle.json  mangrove.json  oldenglishoak.json  pale_oak.json  pine.json  spruce.json
src/: main.cpp
src/core/: Application.cpp  Application.h  ResourceManager.cpp  ResourceManager.h  State.h  StateManager.cpp  StateManager.h
src/debug/: Benchmark.cpp  Benchmark.h  CrashHandler.cpp  CrashHandler.h  Logger.cpp  Logger.h  Profiler.cpp  Profiler.h
src/ecs/: Components.h  Systems.cpp  Systems.h
src/render/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Model.h  ModelLoader.cpp  ModelLoader.h  NoisePreview.cpp  NoisePreview.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
src/shaders/: basic.fs  basic.vs
src/states/: GameState.cpp  GameState.h  LoadingState.cpp  LoadingState.h  MenuState.cpp  MenuState.h
src/utils/: MathUtils.h
src/world/: Block.h  BlockRegistry.cpp  CaveGenerator.cpp  CaveGenerator.h  Chunk.cpp  Chunk.h  ChunkColumn.h  FloraDecorator.cpp  FloraDecorator.h  OreDecorator.cpp  OreDecorator.h  Player.cpp  Player.h  TreeDecorator.cpp  TreeDecorator.h  World.cpp  World.h  WorldDecorator.h  WorldGenConfig.h  WorldGenRegion.cpp  WorldGenRegion.h  WorldGenerator.cpp  WorldGenerator.h
src/world/blocks/: AirBlock.h  FallingBlock.h  LayeredBlock.h  LightBlock.h  LiquidBlock.cpp  LiquidBlock.h  LogBlock.h  MetadataBlock.h  PlantBlock.h  SlabBlock.h  SolidBlock.h  StairBlock.h
src/world/decorators/: TreeGenConfig.h  TreeRegistry.cpp  TreeRegistry.h  TreeStructure.h
